# thorium-legacy

./: .gitattributes  .gitignore  .gitmodules  DEPOT_TOOLS_REVISION  DEPOT_TOOLS_REVISION.txt  M124_Rebase_Bookmarks.html  README.md  SECURITY.md  TODO.md  TODO.txt  VERSION.sh  args.gn  bookmarks_7_29_24.html  build.sh  build_android.sh  build_linux.sh  build_mac.sh  build_win.sh  linux_build.sh  patch.sh  patch_win7.sh  patch_xp.sh  set_exec.sh  setup.sh  setup_xp.sh  trunk.sh  ulimit.conf  upstream_version.sh  version.sh  version_clean.sh  win7_patch.sh
arm/android/: chromium_android_args.gn
docs/: FAQ.md
infra/: PATCHES.md  THORIUM_DEV_BOOKMARKS.html  TODO.md  linux_args.gn  set_exec.sh  thor_ver
other/: README.md  add-hevc-ffmpeg-decoder-parser.patch  ffmpeg_hevc_ac3.patch  win32_args.gn
patches/: M122-to-compare-for-future-revision.patch  README.md  bookmarks_8_28_24.html  boringssl.patch  disable_driver_signature_enforcement.bat  ftp-support-thorium.patch  pdfium.patch  skia.patch  supermium_args.gn  v8.patch  webrtc.patch  win7-8-8.1-support.patch  win7-8-8.1-support_chromium.patch  win7-8-8.1-support_thorium.patch  winxp-vista-support_thorium.patch
patches/M119/: supermium_119.patch  supermium_args.gn  win7-8-8.1-support.bak  win7-8-8.1-support_chromium.patch  win7-8-8.1-support_thorium.patch
portable/: README.win  THORIUM_SHELL.BAT
src/: BUILD.gn  DEPS
thorium-libjxl/: LICENSE  NOTES.txt  README.md  Restore-libjxl-image-type-emulation-in-M117.patch  Restore-libjxl-in-M117.patch  THOR_JXL_BOOKMARKS.html  TODO.md  VERSION.md  setup.sh
(+191 files in other folders)
