is_debug = false
symbol_level = 1
enable_nacl = false
blink_symbol_level = 1
v8_symbol_level = 1
is_official_build = true
proprietary_codecs = true
enable_platform_hevc = true
ffmpeg_branding = "Chrome"
enable_widevine = true
use_large_pdbs = false
thin_lto_enable_optimizations = true
disable_fieldtrial_testing_config = true
enable_reporting = false
rtc_use_h264 = true
enable_ffmpeg_video_decoders = true
media_use_ffmpeg = true
media_use_libvpx = true
enable_media_drm_storage = true
enable_hangout_services_extension = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true
use_webaudio_pffft = true
v8_enable_fast_torque = true 
v8_enable_builtins_optimization = true
v8_enable_maglev = true
v8_enable_turbofan = true
target_cpu = "x64" 
target_os = "win"
